# NameLess

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  versions.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
base/: build.gradle
base/base_component/: build.gradle
base/base_component/src/main/: AndroidManifest.xml
base/base_module/: build.gradle
base/src/main/: AndroidManifest.xml
lib/blurringview/: build.gradle
lib/bubbleview/: build.gradle
lib/bubbleview/src/main/: AndroidManifest.xml
lib/jsoncpp/: CMakeLists.txt  build.gradle
lib/jsoncpp/src/main/: AndroidManifest.xml
lib/toasty/: build.gradle
lib/zxing/: build.gradle
lib_base_component/: build.gradle
lib_base_module/: build.gradle
lib_blurringview/: build.gradle
lib_blurringview/src/main/: AndroidManifest.xml
lib_jsoncpp/: build.gradle
lib_jsoncpp/src/main/cpp/: native-lib.cpp
lib_jsoncpp/src/main/cpp/libjson/: CMakeLists.txt  json_reader.cpp
lib_toasty/: build.gradle
lib_toasty/src/main/: AndroidManifest.xml
lib_zxing/: build.gradle
lib_zxing/src/main/: AndroidManifest.xml
login/: build.gradle
module/blurringdemo/: build.gradle
module/blurringdemo/src/main/: AndroidManifest.xml
module/bubbleviewdemo/: build.gradle
module/bubbleviewdemo/src/main/: AndroidManifest.xml
module/login/: build.gradle
module/okhttp3demo/: build.gradle
module/share/: build.gradle
module/webserver/: build.gradle
module/webserver/src/main/: AndroidManifest.xml
module_blurringview/: build.gradle
module_login/: build.gradle
module_login/src/main/: AndroidManifest.xml
module_login/src/main/manifest/: AndroidManifest.xml
module_okhttp3/: build.gradle
module_okhttp3/src/main/: AndroidManifest.xml
module_share/: build.gradle
module_share/src/main/: AndroidManifest.xml
module_share/src/main/manifest/: AndroidManifest.xml
module_webserver/: build.gradle
share/: build.gradle
share/src/main/: AndroidManifest.xml
share/src/main/manifest/: AndroidManifest.xml
(+158 files in other folders)
